# saltext-vmware-vsphere

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml  setup.cfg
docs/: conf.py  index.rst
requirements/: base.txt  dev.in
requirements/py3.5/: tests.txt
requirements/py3.6/: docs.txt  lint.txt  tests.txt
requirements/py3.7/: docs.txt  lint.txt  tests.txt
requirements/py3.8/: docs.txt  lint.txt  tests.txt
requirements/py3.9/: docs.txt  lint.txt  tests.txt
src/saltext/vcenter/: __init__.py  loader.py  version.py
src/saltext/vcenter/modules/: fnord.py
src/saltext/vcenter/states/: fnord.py
src/saltext/vcenter/utils/: bloop.py
src/saltext/vmware/: version.py
src/saltext/vmware/config/schemas/: esxi.py
src/saltext/vmware/grains/: esxi.py
src/saltext/vmware/modules/: vmware_datastore.py  vmware_extra.py  vmware_info.py  vmware_syslog.py  vmware_tag.py  vmware_vm.py  vmware_vsan.py  vmware_vsphere.py
src/saltext/vmware/proxy/: esxi.py
src/saltext/vmware_vsphere/: version.py
src/saltext/vmware_vsphere/modules/: blerp.py  vmware_cluster.py  vmware_coredump.py  vmware_datacenter.py  vmware_disk.py  vmware_dvs.py  vmware_firewall.py  vmware_license.py  vmware_service.py  vmware_syslog.py  vmware_tag.py  vmware_vm.py  vmware_vmotion.py  vmware_vsan.py  vmware_vsphere.py
src/saltext/vmware_vsphere/utils/: vmware.py
tests/: conftest.py
tests/integration/: conftest.py  test_cool.py  test_high_level.py
tests/unit/: test_fun.py
tests/unit/modules/: test_vra.py
tests/unit/states/: test_vra.py
